Actualizar detalle.html

--- a/informacion/detalle.html
+++ b/informacion/detalle.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detalles del Artículo</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="/informacion/detalle.css">
+  <link rel="stylesheet" href="detalle.css">
 </head>
 <body>
   <div id="detalle-articulo">
