Actualizar detalle.html

--- a/informacion/detalle.html
+++ b/informacion/detalle.html
@@ -10,6 +10,7 @@
 <body>
   <div id="detalle-articulo">
     <h2>Detalles del Artículo</h2>
+    <img id="detalle-imagen" src="" alt="" width="300px">
     <h3 id="detalle-nombre"></h3>
     <p id="detalle-descripcion"></p>
     <p id="detalle-precio"></p>
@@ -48,6 +49,7 @@
 
                     if (articulo) {
                         // Mostrar los detalles del artículo
+                        $('#detalle-imagen').attr('src', articulo.src);
                         $('#detalle-nombre').text(articulo.nombre);
                         $('#detalle-descripcion').text(articulo.alt);
                         $('#detalle-precio').text(`${articulo.precio}`);
