--- a/informacion/detalle.html
+++ b/informacion/detalle.html
@@ -17,12 +17,12 @@
     <div id="botones-detalle">
       <!-- Botón para Mandar WhatsApp -->
       <a id="whatsapp-link" href="https://wa.me/573178252933">
-        <button>Manda un WhatsApp</button>
+        <button>Envianos un Mensaje</button>
       </a>
 
       <!-- Botón para Volver al Índice -->
       <a href="../index.html">
-        <button>Volver al Índice</button>
+        <button id="volverInicio">Volver al Inicio</button>
       </a>
     </div>
   </div>
